# lidar_polarview

./: CMakeLists.txt  Doxyfile  README.md
source/include/: DistanceSensor.hpp  Lidar.hpp  Locatable.hpp  LocatedDistanceSensor.hpp  Sensor.hpp  communicatie_stub.hpp
source/src/: Lidar.cpp  communicatie_stub.cpp  main.cpp
